frontend/angular-trading-site/src/app/app.component.css
.page-wrapper {
  width: 100%;
  min-height: 300px;
  display: grid;
  background-color: rgb(221, 238, 253);
  grid-template-columns: 1fr;
  grid-template-rows: 100px auto 1fr auto;
  grid-template-areas:
    "header"
    "filters"
    "content"
    "footer";
}

@media (min-width: 641px) {
  .page-wrapper {
    grid-template-columns: auto 1fr;
    grid-template-rows: auto 1fr auto;
    grid-template-areas:
      "filters header"
      "filters content"
      "filters footer";
  }
}

@media (min-width: 1025px) {
  .page-wrapper {
    grid-template-areas:
      "header header"
      "filters content"
      "footer footer";
  }
}

.header-container {
  grid-area: header;
  background-color: white;

}

.filters-container {
  grid-area: filters;
  padding: 10px;
  margin: 30px;
  background-color: white;
  min-width: 300px;
}

.content-container {
  grid-area: content;
  margin: 30px;
  margin-right: 20px;
  background-color: white;
}

.footer-container {
  grid-area: footer;
  background-color: white;
}

.active-link{
  font-weight: bold;
}

